--- a/src/components/TilesBox/index.css
+++ b/src/components/TilesBox/index.css
@@ -1,8 +1,12 @@
 .TilesBox {
   background-color: #fff;
   border: 1px solid #000;
-
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   height: 60vh;
   margin: 6rem auto;
+  padding: 1rem;
   width: 70vw;
 }
