--- a/src/components/TilesBox/TilesBox.css
+++ b/src/components/TilesBox/TilesBox.css
@@ -1,11 +1,12 @@
 .TilesBox {
+  aspect-ratio: 1 / 1;
   background-color: #fff;
   border: 1px solid #000;
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  height: 60vh;
+
   margin: 6rem auto;
   padding: 1rem;
   width: 70vw;
