--- a/src/components/Restart/Restart.css
+++ b/src/components/Restart/Restart.css
@@ -6,7 +6,7 @@
   display: flex;
   font-size: 3rem;
   font-weight: 500;
-  justify-content: end;
+  justify-content: flex-end;
   margin-right: 10rem;
   margin-top: 1rem;
 }
