--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
 }
+
+.subMenu {
+  display: grid;
+  grid-template-areas: "victory start";
+  grid-template-columns: 2fr 1fr;
+  height: 4rem;
+  margin: 1rem auto;
+
+  width: 70vw;
+}
