--- a/src/components/TilesBox/TilesBox.css
+++ b/src/components/TilesBox/TilesBox.css
@@ -6,8 +6,7 @@
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-
-  margin: 2rem auto;
+  margin: 2rem auto 1rem;
   padding: 1rem;
   width: 70vw;
 }
