--- a/src/components/Victory/Victory.css
+++ b/src/components/Victory/Victory.css
@@ -1,5 +1,5 @@
 .Victory {
-  font-family: "Pacifico", cursive;
+  font-family: 'Bonbon', cursive;
   align-items: center;
   color: rgb(0, 81, 255);
   display: flex;
