--- a/src/components/TilesBox/TilesBox.css
+++ b/src/components/TilesBox/TilesBox.css
@@ -1,12 +1,12 @@
 .TilesBox {
   aspect-ratio: 1 / 1;
-  background-color: #fff;
-  border: 1px solid #000;
+  background-color: rgb(247, 217, 173);
+  border: 1px solid rgb(177, 139, 14);
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  margin: 2rem auto 1rem;
+  margin: 3rem auto;
   padding: 1rem;
   width: 70vw;
 }
