--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -1,5 +1,6 @@
 .Tile {
   aspect-ratio: 1 / 1;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,6 +8,11 @@
 
 .tileImage {
   aspect-ratio: 1 / 1;
+  border-radius: 1rem;
   height: auto;
   width: 100%;
+}
+
+.zooImage {
+  border: 1px solid #7a9e9f;
 }
