--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,7 +1,13 @@
 .mainContainer {
   align-items: center;
-  background-color: #eef5db;
+  background-color: #ffffff;
   display: flex;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
+}
+
+.subContainer {
+  max-height: 80vh;
+  max-width: 850px;
+  padding: 2rem;
 }
