--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -8,11 +8,13 @@
 
 .tileImage {
   aspect-ratio: 1 / 1;
+
   border-radius: 1rem;
   height: auto;
   width: 100%;
 }
 
-.zooImage {
+.tileWithBorder {
+  background-color: antiquewhite;
   border: 1px solid #7a9e9f;
 }
