--- a/src/components/TilesBox/TilesBox.css
+++ b/src/components/TilesBox/TilesBox.css
@@ -8,7 +8,9 @@
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
+  height: 80%;
   margin: 3rem auto;
+  max-width: 60%;
   padding: 1rem;
   width: 70vw;
 }
