--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,13 +1,15 @@
 .mainContainer {
-  align-items: center;
-  background-color: #ffffff;
   display: flex;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
+  padding: 0.5rem;
 }
 
-.subContainer {
-  max-height: 80vh;
-  max-width: 850px;
-  padding: 2rem;
+.subMenu {
+  display: flex;
+  height: 2rem;
+  justify-content: space-around;
+  margin: 0.5rem auto;
+  padding: 0.5rem;
+  width: 80vw;
 }
