--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -2,6 +2,7 @@
   display: flex;
   height: 100vh;
   justify-content: center;
+  margin: 0 auto;
   padding: 0.5rem;
   width: 90%;
 }
@@ -13,6 +14,11 @@
   justify-content: space-between;
   margin: 1rem auto;
   max-height: 10%;
-  max-width: 70%;
+  /* max-width: 70%; */
+  max-width: 550px;
   padding: 1rem;
+}
+
+.subContainer {
+  margin: 0;
 }
