--- a/src/components/TilesBox/TilesBox.css
+++ b/src/components/TilesBox/TilesBox.css
@@ -1,6 +1,6 @@
 .TilesBox {
   aspect-ratio: 1 / 1;
-  background-color: #D6E5FA;
+  background-color: #d3ffc6;
   border: 1px solid #7a9e9f;
   border-radius: 1rem;
   box-shadow: 3px 3px 10px rgb(0 0 0 / 0.2);
@@ -8,7 +8,7 @@
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  margin:  2rem auto;
+  margin: 2rem auto;
   max-height: 70%;
   max-width: 90%;
 
